[project]
name = "tag-engine-drug-adjusted"
version = "0.1.0"
description = "High-fidelity survival simulation engine with asymmetric information and adaptive AI."
dependencies = [
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "matplotlib>=3.7.0",
    "pillow>=9.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pkg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ['py310']
